# Personal-Assistant

./: JARVIS_Development_Plan.md  JARVIS_Requirements.md  JARVIS_Technical_Architecture.md
jarvis/: .gitignore  PHASE2_PLAN.md  README.md  pyproject.toml  requirements-voice.txt  requirements.txt  setup.sh
jarvis/jarvis/: __init__.py  main.py  runtime.py
jarvis/jarvis/agents/: __init__.py  agent.py  graph.py  hitl.py  orchestrator.py  router.py  state.py
jarvis/jarvis/audit/: __init__.py  audit_log.py
jarvis/jarvis/backup/: __init__.py  backup.py
jarvis/jarvis/brain/: __init__.py  bench.py  curiosity.py  dialog.py  facts.py  identity.py  loop.py  persona.py
jarvis/jarvis/config/: __init__.py  config.py
jarvis/jarvis/connectors/: __init__.py  briefing.py  browser.py  calendar.py  desktop.py  email.py
jarvis/jarvis/core/: __init__.py  (+5 more)
jarvis/tests/: test_adapter_conformance.py  test_addressing.py  test_agents.py  test_approval.py  test_audit_log.py  test_background.py  test_backup_and_tracing.py  test_bargein.py  test_bench.py  test_brain_loop.py  test_consolidation.py  test_curiosity.py  test_desktop.py  test_dialog.py  test_facts.py  test_git_tracker.py  test_identity.py  test_kill_switch.py  test_langgraph.py  test_memory.py  test_model_adapter.py  test_onboarding.py  test_proactive.py  test_runtime_routing.py  test_sandbox_guard.py  test_speaker_verify.py  test_tasks_journal_handoff.py  test_tools.py  test_vault.py  test_voice_activity.py  test_voice_approval.py  test_voice_pipeline.py  test_voice_preflight.py  test_wake_match.py  test_web_tools.py
(+42 files in other folders)
