[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.0.1"
description = "JARVIS — private, always-on personal AI assistant (Phase 0: safety foundation)"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
